# test-task

./: .env.example  .gitignore  README.md  docker-compose.yml
project_src/bet_maker/: Dockerfile  pyproject.toml
project_src/bet_maker/src/: __init__.py  app.py
project_src/bet_maker/src/bets/: exceptions.py  models.py  routers.py  schemas.py  services.py
project_src/bet_maker/src/core/: celery.py  config.py  database.py  event_consumer.py  rabbitmq.py
project_src/bet_maker/src/events/: exceptions.py  routers.py  schemas.py  services.py
project_src/bet_maker/src/migrations/versions/: 40b785e2690d_create_bet_tabel.py
project_src/bet_maker/src/tasks/: bet_tasks.py
project_src/line_provider/: .dockerignore  Dockerfile  pyproject.toml
project_src/line_provider/src/: __init__.py  app.py
project_src/line_provider/src/core/: celery.py  config.py  exception.py  rabbitmq.py  service.py
project_src/line_provider/src/events/: exceptions.py  models.py  routers.py  schemas.py  services.py
project_src/line_provider/src/migrations/: env.py
project_src/line_provider/src/migrations/versions/: 48e8632b2c3e_updatd_deadline_field_in_event_table.py  f2472a058443_created_event_table.py
project_src/line_provider/src/tasks/: line_tasks.py
